processed/gerrit/txt_full/53685.txt
Change:     53685
Subject:    LU-15798 build: fix gcc-11 -Wstringop-overread warnings
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/53685
Change-Id:  I8cafcdfc04957f542dd92c22dfa90bc050a27e23
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      xinliang
Created:    2024-01-16 10:03:13.000000000
Updated:    2024-01-16 13:41:59.000000000
Patch Set:  2
Insertions: +7
Deletions:  -1
Comments:   0 (0 unresolved)
Topic:      LU-15798

--- Reviewers ---
  REVIEWER: Lai Siyao, Andreas Dilger, James Simmons, Shaun Tancheff, xinliang

--- Commit Message ---
LU-15798 build: fix gcc-11 -Wstringop-overread warnings

Gcc-11 detects a -Wstringop-overread warning on using 'strlen' here.
Because string access exceeds the 'struct changelog_rec cr' var size.
This is a false positive here, count the string length manually to
avoid using 'strlen'.

In file included from lustre/include/uapi/linux/lustre/lustre_cfg.h:38,
                 from llog_reader.c:57
In function 'changelog_rec_snamelen',
    inlined from 'print_changelog_rec' at llog_reader.c:834:16:
lustre/include/uapi/linux/lustre/lustre_user.h:2102:16: error: 'strlen'
reading 1 or more bytes from a region of size 0 [-Werror=stringop-overread]
 2102 |         return strlen(changelog_rec_sname(rec));
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from lustre/include/uapi/linux/lustre/lustre_fid.h:41,
                 from llog_reader.c:58:
lustre/include/uapi/linux/lustre/lustre_user.h: In function 'print_changelog_rec':
lustre/include/uapi/linux/lustre/lustre_idl.h:2929:30: note: at offset
[105, 437] into source object 'cr' of size 64
 2929 |         struct changelog_rec cr; /**< Variable length field */
      |                              ^~

Fixes: efc5c8d4de60 ("LU-16335 build: remove _GNU_SOURCE dependency in
		lustre_user.h")
Signed-off-by: Xinliang Liu <xinliang.liu@linaro.org>
Change-Id: I8cafcdfc04957f542dd92c22dfa90bc050a27e23

--- Review History ---

--- Message (xinliang, 2024-01-16 10:03:13.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2024-01-16 10:03:27.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2024-01-16 10:04:33.000000000) ---
Patch Set 1:

Builds for x86_64 centos7,rhel8.5 successful
Job output URL: https://testing.whamcloud.com/gerrit-janitor/38737/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs

--- Message (xinliang, 2024-01-16 10:10:08.000000000) ---
Patch Set 2: Commit message was updated.

--- Message (jenkins, 2024-01-16 10:10:17.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews/101405/ : ABORTED

--- Message (Lustre Gerrit Janitor, 2024-01-16 10:12:34.000000000) ---
Patch Set 2:

Builds for x86_64 centos7,rhel8.5 successful
Job output URL: https://testing.whamcloud.com/gerrit-janitor/38738/results.html

 Commencing initial testing: runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs

--- Message (wc-checkpatch, 2024-01-16 10:13:38.000000000) ---
Patch Set 2:

Looks good to me.

--- Message (Lustre Gerrit Janitor, 2024-01-16 10:23:44.000000000) ---
Patch Set 2:

Initial testing succeeded.

Succeeded:
- runtests@ldiskfs+DNE runtests-ssk@ldiskfs+SharedKey runtests@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/38738/results.html
Commencing standard testing: 
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity3@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs conf-sanity-slow-106@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs racer@ldiskfs+DNE racer@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs

--- Message (xinliang, 2024-01-16 10:33:38.000000000) ---
Abandoned

This issue can be fixed by patch: https://review.whamcloud.com/c/fs/lustre-release/+/53624

--- Message (Lustre Gerrit Janitor, 2024-01-16 13:41:59.000000000) ---
Patch Set 2:

Testing has completed with errors!
IMPORTANT: these tests appear to be new failures unique to this patch
- racer@zfs:test_1(Seen in reviews: 53346 52075 51851 43612)


> conf-sanity3@ldiskfs+DNE Timeout(7011s)
> conf-sanity-slow-106@zfs Timeout(5009s)
> racer@ldiskfs+DNE Timeout(709s)
> racer@zfs Failure(481s)
- 1(test_1 failed with 1) 

Succeeded:
- conf-sanity1@ldiskfs+DNE conf-sanity2@ldiskfs+DNE conf-sanity-slow@ldiskfs+DNE conf-sanity-slow-106@ldiskfs+DNE conf-sanity1@zfs conf-sanity2@zfs conf-sanity3@zfs conf-sanity-slow@zfs insanity@ldiskfs+DNE insanity@zfs lnet-selftest@zfs lustre-rsync-test@ldiskfs+DNE lustre-rsync-test@zfs ost-pools@ldiskfs+DNE ost-pools@zfs pjdfstest@ldiskfs+DNE pjdfstest@zfs recovery-small@ldiskfs+DNE recovery-small@zfs replay-dual@ldiskfs+DNE replay-dual@zfs replay-ost-single@ldiskfs+DNE replay-ost-single@zfs replay-single@ldiskfs+DNE replay-single@zfs replay-vbr@ldiskfs+DNE replay-vbr@zfs sanity1@ldiskfs+DNE sanity2@ldiskfs+DNE sanity-slow@ldiskfs+DNE sanity1@zfs sanity2@zfs sanity-slow@zfs sanity-benchmark@ldiskfs+DNE sanity-benchmark@zfs sanity-dom@ldiskfs+DNE sanity-dom@zfs sanity-flr@ldiskfs+DNE sanity-flr@zfs sanity-hsm@ldiskfs+DNE sanity-hsm@zfs sanity-lfsck@ldiskfs+DNE sanity-lfsck@zfs sanity-lnet@zfs sanity-pcc@ldiskfs+DNE sanity-pcc@zfs sanity-pfl@ldiskfs+DNE sanity-pfl@zfs sanity-quota@ldiskfs+DNE sanity-quota@zfs sanity-scrub@ldiskfs+DNE sanity-scrub@zfs sanity-sec@ldiskfs+DNE sanity-sec@zfs sanityn@ldiskfs+DNE sanityn@zfs 

(centos7)All results and logs: https://testing.whamcloud.com/gerrit-janitor/38738/results.html
